# Helldivers2_warUpdateApplet

./: .gitignore
WarUpdates/Helldivers_2_War_Updates/: CMakeLists.txt  api_caller.cpp  api_caller.h  api_types.h  display_info_handler.cpp  display_info_handler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  thread_processes.h
